Added a public interface for sample index management

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+DataSplits = "c4daa60e-60e8-4e0a-bcf3-f80a6d479af9"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
