--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,13 @@ authors = ["Davide Crucitti <davide.crucitti@grheco.com>"]
 version = "0.1.0"
 
 [deps]
+ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+ArrayInterface = "7.19.0"
 Clustering = "0.15.8"
 StatsBase = "0.34.5"
