--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,18 @@ authors = ["Davide Crucitti <davide.crucitti@grheco.com>"]
 version = "0.1.0"
 
 [deps]
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-StatsBase = "0.34"
 ArrayInterface = "6,7"
-Distances = "0.10.3 - 0.11"
-Statistics = "1"
 Clustering = "0.15"
+Distances = "0.10.3 - 0.11"
+MLUtils = "0.4.8"
+Statistics = "1"
+StatsBase = "0.34"
